Set up first gif for question 2
Wasn't able to use gif when downloaded locally.  Was able to create it on giphy.com and host it from there.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>CS:GO Trivia</title>
+        <title>Letterkenny Trivia</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <h1>Console.log</h1>
+        <div id="question"></div>
+        <div id="timer"></div>
+        <div id="choices"></div>
+        <div id="answer"></div>
+        <div id="image"></div>
+
+
         
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="assets/javascript/app.js"></script>
     </body>
 </html>
