--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <div class="card col-xs-10 col-md-12 m-auto">
+        <div class="card col-xs-10 col-md-12 m-auto text-center">
             <div class="card-body" id="question"></div>
         </div>
         
