--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Letterkenny Trivia</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,9 +16,10 @@
         <div class="card col-xs-10 col-md-12 m-auto text-center">
             <div class="card-body" id="question"></div>
         </div>
-        <div id="timer"></div>
+        <div class="card col-xs-10 col-md-12 mx-auto text-center" id="timer"></div>
         <div id="choices"></div>
-        <div id="image"></div>
+        <div class="mx-auto text-center" id="image"></div>
+        <div class="mx-auto text-center" id="result"></div>
     </div>
 
 
