--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Letterkenny Trivia</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Squada+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -13,6 +13,7 @@
 
 <body>
     <div class="container">
+        <div id="new"></div>
         <div class="card col-xs-10 col-md-12 m-auto text-center">
             <div class="card-body" id="question"></div>
         </div>
