--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
         <div id="new"></div>
+        <div id="score"></div>
         <div class="card col-xs-10 col-md-12 m-auto text-center">
             <div class="card-body" id="question"></div>
         </div>
